// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CReset.vue should accept config prop 1`] = `
<head>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{line-height:1.15;-webkit-text-size-adjust:100%;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    body{margin:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    main{display:block;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    h1{font-size:2em;margin:0.67em 0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    hr{box-sizing:content-box;height:0;overflow:visible;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    pre{font-family:monospace,monospace;font-size:1em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    a{background-color:transparent;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    abbr[title]{border-bottom:none;-webkit-text-decoration:underline;text-decoration:underline;-webkit-text-decoration:underline dotted;-webkit-text-decoration:underline dotted;text-decoration:underline dotted;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    b,strong{font-weight:bolder;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    code,kbd,samp{font-family:monospace,monospace;font-size:1em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    small{font-size:80%;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    sub{bottom:-0.25em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    sup{top:-0.5em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    img{border-style:none;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,input{overflow:visible;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,select{text-transform:none;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    fieldset{padding:0.35em 0.75em 0.625em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    progress{vertical-align:baseline;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea{overflow:auto;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{-webkit-appearance:none!important;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input[type="number"]{-moz-appearance:textfield;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [type="search"]{-webkit-appearance:textfield;outline-offset:-2px;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [type="search"]::-webkit-search-decoration{-webkit-appearance:none!important;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    details{display:block;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    summary{display:-webkit-box;display:-webkit-list-item;display:-ms-list-itembox;display:list-item;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    template{display:none;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [hidden]{display:none!important;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{box-sizing:border-box;font-family:sans-serif;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    *,*::before,*::after{box-sizing:border-box;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    blockquote,dl,dd,h1,h2,h3,h4,h5,h6,hr,figure,p,pre{margin:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button{background:transparent;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    fieldset{margin:0;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    ol,ul{margin:0;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";line-height:1.5;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:100%;text-rendering:optimizelegibility;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    hr{border-top-width:1px;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    img{border-style:solid;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea{resize:vertical;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,[role="button"]{cursor:pointer;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button::-moz-focus-inner{border:0!important;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    table{border-collapse:collapse;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    a{color:inherit;-webkit-text-decoration:inherit;text-decoration:inherit;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,input,optgroup,select,textarea{padding:0;line-height:inherit;color:inherit;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    pre,code,kbd,samp{font-family:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    img,svg,video,canvas,audio,iframe,embed,object{vertical-align:middle;display:block;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    img,video{max-width:100%;height:auto;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{line-height:1.5;color:#1A202C;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    *,*::before,*::after{border-width:0;border-style:solid;border-color:#E2E8F0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input:-ms-input-placeholder,textarea:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-ms-input-placeholder,textarea::-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-webkit-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-moz-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea::-webkit-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea::-moz-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::placeholder,textarea::placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{line-height:1.5;color:indigo;background-color:pink;font-family:'Comic Sans MS';}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    *,*::before,*::after{border-width:0;border-style:solid;border-color:#E2E8F0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input:-ms-input-placeholder,textarea:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-ms-input-placeholder,textarea::-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-webkit-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-moz-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea::-webkit-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea::-moz-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::placeholder,textarea::placeholder{color:#A0AEC0;}
  </style>
</head>
`;

exports[`CReset.vue should inject global styles 1`] = `
<head>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{line-height:1.15;-webkit-text-size-adjust:100%;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    body{margin:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    main{display:block;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    h1{font-size:2em;margin:0.67em 0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    hr{box-sizing:content-box;height:0;overflow:visible;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    pre{font-family:monospace,monospace;font-size:1em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    a{background-color:transparent;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    abbr[title]{border-bottom:none;-webkit-text-decoration:underline;text-decoration:underline;-webkit-text-decoration:underline dotted;-webkit-text-decoration:underline dotted;text-decoration:underline dotted;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    b,strong{font-weight:bolder;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    code,kbd,samp{font-family:monospace,monospace;font-size:1em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    small{font-size:80%;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    sub{bottom:-0.25em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    sup{top:-0.5em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    img{border-style:none;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,input{overflow:visible;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,select{text-transform:none;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    fieldset{padding:0.35em 0.75em 0.625em;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    progress{vertical-align:baseline;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea{overflow:auto;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{-webkit-appearance:none!important;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input[type="number"]{-moz-appearance:textfield;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [type="search"]{-webkit-appearance:textfield;outline-offset:-2px;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [type="search"]::-webkit-search-decoration{-webkit-appearance:none!important;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    details{display:block;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    summary{display:-webkit-box;display:-webkit-list-item;display:-ms-list-itembox;display:list-item;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    template{display:none;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    [hidden]{display:none!important;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{box-sizing:border-box;font-family:sans-serif;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    *,*::before,*::after{box-sizing:border-box;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    blockquote,dl,dd,h1,h2,h3,h4,h5,h6,hr,figure,p,pre{margin:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button{background:transparent;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    fieldset{margin:0;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    ol,ul{margin:0;padding:0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";line-height:1.5;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:100%;text-rendering:optimizelegibility;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    hr{border-top-width:1px;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    img{border-style:solid;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea{resize:vertical;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,[role="button"]{cursor:pointer;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button::-moz-focus-inner{border:0!important;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    table{border-collapse:collapse;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    a{color:inherit;-webkit-text-decoration:inherit;text-decoration:inherit;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    button,input,optgroup,select,textarea{padding:0;line-height:inherit;color:inherit;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    pre,code,kbd,samp{font-family:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    img,svg,video,canvas,audio,iframe,embed,object{vertical-align:middle;display:block;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    img,video{max-width:100%;height:auto;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    html{line-height:1.5;color:#1A202C;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    *,*::before,*::after{border-width:0;border-style:solid;border-color:#E2E8F0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input:-ms-input-placeholder,textarea:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-ms-input-placeholder,textarea::-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-webkit-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::-moz-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea::-webkit-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea::-moz-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    textarea:-ms-input-placeholder{color:#A0AEC0;}
  </style>
  <style
    data-emotion="css"
    data-s=""
  >
    
    input::placeholder,textarea::placeholder{color:#A0AEC0;}
  </style>
</head>
`;

exports[`CReset.vue should render correctly 1`] = `
<DocumentFragment>
  <!---->
</DocumentFragment>
`;
